--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,52 @@
-body {
-  color: blue;
-}
+h1{
+  font-family: 'Bungee Shade', sans-serif;
+  }
+  
+  .header {
+  text-align: center;
+  }
+  
+  .header h1{
+  font-size: 3em;
+  / color: grey; /
+  }
+  
+  / text inside the form /
+  .form {
+  text-align: center;
+  }
+  
+  .form__body{
+  color: #293133;
+  }
+  
+  .form__input{
+  width: 50vh;
+  height: 50px;
+  border-radius: 15px;
+  }
+  
+  label {
+  font-family: 'Roboto', sans-serif;
+  font-size: 1.3em;
+  }
+  
+  .lines{
+  color: #293133;
+  }
+  
+  .radioButton{
+  }
+  
+  .form__submit{
+  margin-top: 30px;
+  color: #293133;
+  font-family: 'Roboto', sans-serif;
+  font-size: 1em;
+  border-radius: 15px;
+  }
+  
+  .form__submit:hover{
+  background-color: black;
+  color: white;
+  }
